fix: fixed overflows

--- a/src/components/Todo/TodoFilters/index.css
+++ b/src/components/Todo/TodoFilters/index.css
@@ -1,3 +1,8 @@
+.filters {
+  position: absolute;
+  bottom: 35px;
+}
+
 .show {
   font-size: 14px;
   font-weight: 500;
