--- a/src/components/Todo/index.css
+++ b/src/components/Todo/index.css
@@ -5,6 +5,7 @@
   border-radius: 5px;
   box-shadow: 0 2px 16px 0 rgba(0, 0, 0, 0.1);
   background-color: #fff;
+  position: relative;
 }
 
 .title {
